@@ -1,8 +1,11 @@
 Title: Remove peer replication from WATO -> useless, senseless, confusing
 Component: wato
-State: open
+Class: nastiness
+State: wontfix
 Date: 2013-08-23 12:26:21
 Targetversion: 1.2.3
-Class: nastiness
 
 It confuses people. This feature does not seem to matter.
+
+2013-12-16 11:45:47: changed state open -> wontfix
+Has been fixed in master.
