@@ -1,0 +1,10 @@
+Title: Improved performance of WATO slave push with a large user base
+Level: 1
+Component: wato
+Version: 1.2.4b1
+Date: 1387192025
+Class: fix
+
+When having a large number of users (several thousands) and pushing them to a
+slave site, the user database hook was executed twice, which resulted in a
+senseless duplicate calculation of things. This has been resolved now.
