@@ -41,6 +41,7 @@
     * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
     * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...
     * 0328 FIX: Modified languages (via local hierarchy) were listed twice...
+    * 0330 FIX: Improved performance of WATO slave push with a large user base...
 
     Notifications:
     * 0108 FIX: Prevent service notification on host alerts...
